--- a/netbox_ipmi_ovh/templates/netbox_ipmi_ovh/ipmi_error.html
+++ b/netbox_ipmi_ovh/templates/netbox_ipmi_ovh/ipmi_error.html
@@ -8,7 +8,7 @@
                 <strong>IPMI OVH Error</strong>
             </div>
             <div class="panel-body">
-                {% error_message %}
+                {{ error_message }}
             </div>
             <div class="panel-footer text-right">
                 <a href="{% url 'home' %}" class="btn btn-xs btn-primary">Home Page</a>
