Add more error handling

--- a/netbox_ipmi_ovh/templates/netbox_ipmi_ovh/ipmi_config.html
+++ b/netbox_ipmi_ovh/templates/netbox_ipmi_ovh/ipmi_config.html
@@ -16,7 +16,7 @@
     </div>
     {% endif %}
     <div class="panel panel-default">
-      <div class="panel-heading"><strong>Password</strong></div>
+      <div class="panel-heading"><strong>IPMI user settings</strong></div>
       <div class="panel-body">
 	{% render_field form.ssh_key_name %}
 	{% render_field form.ip_to_allow %}
